<resources>
    <string name="app_name">Movie Show</string>
    <string name="most_popular">Most Popular</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="error_message">Something went wrong when trying to get the latest movies, Please try again.</string>
    <string name="div10">10</string>
    <string name="title_label">Title:</string>
    <string name="release_date">Release date:</string>
    <string name="vote_average">Vote average:</string>
    <string name="synopsis">Synopsis:</string>
    <string name="save_movie_btn">save movie button</string>
    <string name="favorites">Favorites</string>
    <string name="trailer_video">Trailer video</string>
    <string name="quality">Quality:</string>
    <string name="user_label">User:</string>
    <string name="show_more">Show more</string>
    <string name="review_title">Reviews</string>
    <string name="trailers_title">Trailers</string>
    <string name="language">Language:</string>
    <string name="see_more">See more</string>
    <string name="no_reviews_found">There are no reviews yet for this title</string>
    <string name="no_related_videos_found">There are no related videos yet for this title</string>
    <integer name="swing_anim_time">750</integer>
</resources>
